[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[build_docs]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_docs]
upload-dir = docs/build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = mirapy
description = Python package for Deep Learning in Astronomy
long_description = MiraPy is a Python package for Deep Learning in Astronomy. It is built using Keras for developing ML models to run on CPU and GPU seamlessly. The aim is to make applying machine learning techniques on astronomical data easy for astronomers, researchers and students.
author = Swapnil Sharma, Akhil Singhal
author_email = swap.sha96@gmail.com, akhilsinghal1234@gmail.com
license = MIT
url = https://github.com/swapsha96/MiraPy
edit_on_github = False
github_project = swapsha96/MiraPy
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy, numpy>=1.11.0, scipy>=0.18.0, matplotlib>=1.3, autograd
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.1.0
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.5

[entry_points]

astropy-package-template-example = packagename.example_mod:main

